@@ -1044,6 +1044,9 @@ xmlui.content_disposition_threshold = 8388608
 
 
 #### Sitemap settings #####
+# the directory where the generated sitemaps are stored
+sitemap.dir = ${dspace.dir}/sitemaps
+
 #
 # Comma-separated list of search engine URLs to 'ping' when a new Sitemap has
 # been created.  Include everything except the Sitemap URL itself (which will
